##Text encoding: utf-8

2011-11-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* COPYING-DOCS: updated to GFDL 1.3.
	* docs/help/*/C/legal.xml: ditto.
	* plugins/paint/selection/group.ui: fixed alignment and group dialog.
	* plugins/paint/selection/groupdlg.cc: ditto.

2011-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogchem3dapp.cc: add a nil pointer to the documents list to
	avoid an unwanted call to gtk_main_quit().

2011-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogchem3dapp.cc: 3d viewer starts working inside goffice
	component.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcugtk/chem3ddoc.cc: ditto.
	* libs/gcugtk/glview.cc: ditto.

2011-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.13.6).

2011-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: really fix mozilla plugin build.
	* mozilla-plugin/moz-plugin.c: ditto.

2011-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: drop GConf support.
	* gchemutils.schemas.in: ditto.
	* plugins/paint/arrows/Makefile.am: ditto.
	* plugins/paint/arrows/gchempaint-arrows.schemas.in: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/crystal/gcrystal.schemas.in: ditto.
	* programs/paint/Makefile.am: ditto.
	* programs/paint/gchempaint.schemas.in: ditto.

2011-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: add support for CIF files.
	* goffice/gogcrystalapp.cc: ditto.
	* libs/gcr/atom.cc: serialize effective radius ratio.
	* libs/gcr/document.cc: fix crasher.
	* libs/gcr/document.h: remove local dialogs list.
	* libs/gcu/spacegroup.cc: don't add too many atoms.

2011-11-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils-priv.h: enhance content type support.
	* goffice/gchemutils.cc: ditto.
	* goffice/gogchem3dapp.h: ditto.
	* goffice/gogcpapp.h: ditto.
	* goffice/gogcrystalapp.h: ditto.
	* goffice/gogcuapp.h: ditto.
