@@ -1,5 +1,14 @@
 ##Text encoding: utf-8
 
+2011-11-18  Jean Bréfort  <jean.brefort@normalesup.org>
+	* plugins/paint/selection/group.cc: make Group derive from DialogOwner
+	so that its property box can be non modal.
+	* plugins/paint/selection/group.h: ditto.
+	* plugins/paint/selection/groupdlg.cc: the dialog can now belong to the
+	group if any.
+	* plugins/paint/selection/selectiontool.cc: ensure we don't open two group
+	dialogs at once.
+
 2011-11-17  Jean Bréfort  <jean.brefort@normalesup.org>
 	* COPYING-DOCS: updated to GFDL 1.3.
 	* docs/help/*/C/legal.xml: ditto.
